# autotools-tutorial

./: README.md
demo/demo04/: configure.ac
demo/demo06/: configure.ac
demo/demo08/: configure.ac
demo/demo10/: configure.ac
demo/demo12/: configure.ac
demo/demo13/: configure.ac
demo/demo18/: Makefile.am  configure.ac
demo/demo19/: Makefile.am
demo/demo21/: Makefile.am  configure.ac
