AC_INIT([hello], [1.0])
AC_PREREQ([2.69])
AC_CONFIG_SRCDIR([hello.c])
AC_CONFIG_FILES([testfile])

#Method 1: Substitute  variable FOO in testfile.in file
AC_SUBST([FOO], [42])

#Method 2: Substitute  variable FOO in testfile.in file
#FOO=42
#AC_SUBST([FOO])

#Method 3: Substitute  variable FOO in testfile.in file
#AC_SUBST([FOO])
#FOO=42

AC_PROG_CC
AC_OUTPUT
